# frontend

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
frontend/: __main__.py  app.py  aws.py  config.py
frontend/client/: api.py  cloud.py  images.py
frontend/forms/: upload.py
frontend/templates/: base.html  images.html  index.html  result.html
frontend/view/: images.py  index.py
