[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["yankovskaya <yankovskaya.my@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
