[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["yankovskaya <yankovskaya.my@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
pydantic = "^1.9.1"
Flask = "^2.1.2"
Flask-WTF = "^1.0.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
